--- a/index.html
+++ b/index.html
@@ -20,6 +20,6 @@
 <body>
     <div id="loader">Loading...</div>
     <input type="file" id="fileInput" accept="image/*" />
-    <script src="script.js" type="module"></script>  <!-- Link to the separate JavaScript file -->
+    <script src="./script.js" type="module"></script>  <!-- Link to the separate JavaScript file -->
 </body>
 </html>
