--- a/index.html
+++ b/index.html
@@ -3,23 +3,41 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>360° Image Sphere</title>
+    <title>360° Panorama to VR</title>
     <style>
         body { margin: 0; }
-        #loader { position: absolute; top: 20px; left: 20px; color: white; display: none; }
+        canvas { display: block; }
+        #upload-button, #generate-button {
+            position: absolute;
+            top: 20px;
+            left: 20px;
+            z-index: 1;
+            background-color: #f0f0f0;
+            padding: 10px;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+        #generate-button {
+            left: 140px;
+            background-color: #4CAF50;
+            color: white;
+            visibility: hidden; /* Initially hidden until an image is uploaded */
+        }
     </style>
+</head>
+<body>
+    <input type="file" id="upload-button" accept="image/*" />
+    <button id="generate-button">Generate VR</button>
+
+    <!-- Load Three.js from official CDN -->
     <script type="importmap">
         {
           "imports": {
-            "three": "https://cdn.jsdelivr.net/npm/three@<version>/build/three.module.js",
-            "three/addons/": "https://cdn.jsdelivr.net/npm/three@<version>/examples/jsm/"
+            "three": "https://cdn.jsdelivr.net/npm/three@0.137.0/build/three.module.js",
+            "three/addons/": "https://cdn.jsdelivr.net/npm/three@0.137.0/examples/jsm/"
           }
         }
       </script>
-</head>
-<body>
-    <div id="loader">Loading...</div>
-    <input type="file" id="fileInput" accept="image/*" />
-    <script src="./script.js" type="module"></script>  <!-- Link to the separate JavaScript file -->
+    <script type="module" src="script.js"></script> <!-- Link to your JavaScript file -->
 </body>
 </html>
